first version with Makefile

--- a/tools/DOMAINcfg/Makefile
+++ b/tools/DOMAINcfg/Makefile
@@ -1,5 +1,4 @@
 SHELL = /bin/bash
-MPI = NO
 AGRIF=NO
 
 include make.inc
@@ -16,11 +15,14 @@ DIR_LIB=lib
 
 FILENAMES =$(notdir $(basename $(wildcard src/*.F90))) $(notdir $(basename $(wildcard src/*.F))) $(notdir $(basename $(wildcard src/*.c))) $(notdir $(basename $(wildcard src/*.f))) $(notdir $(basename $(wildcard src/*.f90)))
 FILES=src/*
-OBJS_CREATE_BATHY=$(addsuffix .o,$(addprefix $(DIR_OBJS)/,$(FILENAMES)))
+OBJS_CREATE_DOMCFG=$(addsuffix .o,$(addprefix $(DIR_OBJS)/,$(FILENAMES)))
+ifeq ($(AGRIF),YES)
 OBJS_AGRIF=obj/agrif2model.o
+else
+OBJS_AGRIF=
+endif	
 
-
-all: depend conv prepagrif AGRIF_LIB $(OBJS_CREATE_COORDINATES) $(PROGS)
+all: depend conv prepagrif AGRIF_LIB $(OBJS_CREATE_DOMCFG) $(PROGS)
 		@echo
 		@echo ===================================================
 		@echo   Nesting is ok
@@ -28,9 +30,10 @@ all: depend conv prepagrif AGRIF_LIB $(OBJS_CREATE_COORDINATES) $(PROGS)
 		@echo
 
 
-make_domain_cfg.exe: $(DIR_LIB)/libdomcfg.a $(DIR_FILES)/nemogcm.f90 $(OBJS_CREATE_COORDINATES) $(OBJS_AGRIF)
-		$(FC) $(LINKFLAGS) $(FFLAGS) -o agrif_create_coordinates $(OBJS_CREATE_COORDINATES) $(OBJS_AGRIF) $(LIBS) -I$(DIR_OBJS) $(FFLAGS_SPEC) -I../../ext/AGRIF
+make_domain_cfg.exe: $(DIR_LIB)/libdomcfg.a $(DIR_FILES)/nemogcm.f90 $(OBJS_CREATE_DOMCFG) $(OBJS_AGRIF)
+		$(FC) $(LINKFLAGS) $(FFLAGS) -o $(PROGS) $(OBJS_AGRIF) $(DIR_LIB)/libdomcfg.a $(LIBS) -I$(DIR_OBJS) $(FFLAGS_SPEC) -I../../ext/AGRIF
 
+ifeq ($(AGRIF),YES)
 prepagrif:
 		@echo
 		@echo ===================================================
@@ -52,17 +55,26 @@ conv:
 
 AGRIF_LIB: 
 		$(MAKE) -C ../../ext/AGRIF FC=$(FC) CPP=$(CPP) FFLAGS="$(FFLAGS)"
+else
 
-$(DIR_LIB)/libdomcfg.a: $(OBJS)
+prepagrif:
+conv:
+AGRIF_LIB: 
+
+endif	
+
+$(DIR_LIB)/libdomcfg.a: $(OBJS_CREATE_DOMCFG)
 		@echo
 		@echo ===================================================
-		@echo   Compile Nesting library...
+		@echo   Compile domcfg library...
 		@echo ===================================================
-		$(AR) -r $@ $(OBJS)
+		$(AR) -r $@ $(OBJS_CREATE_DOMCFG)
 		ranlib $@
 		@echo
 
 
+
+ifeq ($(AGRIF),YES)
 
 $(DIR_OBJS)/%.o: $(DIR_FILES)/%.F90 Makefile  MODEL.CPP 
 		$(CPP) -include MODEL.CPP $(CPPFLAGS) $(DIR_FILES)/$(*F).F90 > $(DIR_PPSRC)/$(*F).f90
@@ -82,19 +94,19 @@ $(DIR_OBJS)/%.o: $(DIR_FILES)/%.f90 Makefile MODEL.CPP
 		$(CPP) -I$(DIR_PPSRC)/AGRIF_INC -include MODEL.CPP $(CPPFLAGS)  $(DIR_PPSRC)/AGRIF_MODELFILES/$(*F).f90 >$(DIR_PPSRC_2)/$(*F).f90	
 		$(FC) $(FFLAGS) -c $(DIR_PPSRC_2)/$(*F).f90 -o $(DIR_OBJS)/$(*F).o -I../../ext/AGRIF -I$(DIR_OBJS)  $(FFLAGS_SPEC) 
 
-#$(DIR_OBJS)/%.o: $(DIR_FILES)/%.F Makefile MODEL.CPP
-#		$(CPP) -include MODEL.CPP $(CPPFLAGS) $(DIR_FILES)/$(*F).F > $(DIR_PPSRC)/$(*F).f
-#		$(FC) $(FFLAGS) $(F77FLG) -c $(DIR_PPSRC)/$(*F).f -o $(DIR_OBJS)/$(*F).o
+else
+$(DIR_OBJS)/%.o: $(DIR_FILES)/%.F Makefile MODEL.CPP
+		$(CPP) -include MODEL.CPP $(CPPFLAGS) $(DIR_FILES)/$(*F).F > $(DIR_PPSRC_2)/$(*F).f
+		$(FC) $(FFLAGS) $(F77FLG) -c $(DIR_PPSRC_2)/$(*F).f -o $(DIR_OBJS)/$(*F).o -I$(DIR_OBJS)  $(FFLAGS_SPEC) 
 
-#$(DIR_OBJS)/%.o: $(DIR_FILES)/%.f90 Makefile MODEL.CPP
-#		$(FC) $(FFLAGS) -c $(DIR_PPSRC)/$(*F).f90 -o $(DIR_OBJS)/$(*F).o
+$(DIR_OBJS)/%.o: $(DIR_FILES)/%.f90 Makefile MODEL.CPP
+		$(FC) $(FFLAGS) -c $(DIR_FILES)/$(*F).f90 -o $(DIR_OBJS)/$(*F).o -I$(DIR_OBJS)  $(FFLAGS_SPEC) 
 
-#$(DIR_OBJS)/par_oce.o: $(DIR_FILES)/par_oce.f90
-#		echo $(OBJS) $(DIR_FILES)/
 
-#$(DIR_OBJS)/%.o: $(DIR_FILES)/%.c Makefile MODEL.CPP
-#	$(CC) -c $(CFLAGS) -c $(DIR_FILES)/$(*F).c -o $(DIR_OBJS)/$(*F).o
+$(DIR_OBJS)/%.o: $(DIR_FILES)/%.c Makefile MODEL.CPP
+	$(CC) -c $(CFLAGS) -c $(DIR_FILES)/$(*F).c -o $(DIR_OBJS)/$(*F).o -I$(DIR_OBJS)  $(FFLAGS_SPEC) 
 
+endif
 #--------------------------------------------------------------------------
 #  Target to create dependeanies.
 #--------------------------------------------------------------------------
