--- a/ext/AGRIF/LIB/Makefile
+++ b/ext/AGRIF/LIB/Makefile
@@ -18,13 +18,13 @@ all: conv
 	@echo ===================================================
 	@echo
 # Modif Laurent Debreu car Version de bison trop ancienne => Eviter l'appel a Bison
-#main.c: convert.y convert.lex
-#	@echo ===================================================
-#	@echo   Rebuilding main.c ...
-#	@echo ===================================================
-#	$(MAKE) -f Makefile.lex main.c
+main.c: ../LEX/convert.y ../LEX/convert.lex
+	@echo ===================================================
+	@echo   Rebuilding main.c ...
+	@echo ===================================================
+	$(MAKE) -f Makefile.lex main.c
 #
-#fortran.c: fortran.y fortran.lex
+fortran.c: ../LEX/fortran.y ../LEX/fortran.lex
 #	@echo ===================================================
 #	@echo   Rebuilding fortran.c ...
 #	@echo ===================================================
@@ -61,7 +61,7 @@ WorkWithlistmoduleinfile.o : WorkWithlistmoduleinfile.c decl.h
 WorkWithlistofcoupled.o : WorkWithlistofcoupled.c decl.h
 
 clean:
-	$(MAKE) -f Makefile.lex clean
+	$(MAKE) -f ../LEX/Makefile.lex clean
 	$(RM) *.o conv
 	
 clean-all: clean
